--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Krocker Photography
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: http://www.krockerphotography.com/images/photo-camera.png
 
 #
 # Flags below are optional
