--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,10 @@ description:
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: http://www.krockerphotography.com/images/photo-camera.png
 
+# Collections
+collections:
+  photos:
+
 #
 # Flags below are optional
 #
